2004-08-05    <jaris@ifi.uio.no>

	* client: Added support for http urls.

	* delegator: Fixed a bug that caused us to request pieces the peer didn't have. (DOH!)

2004-08-04    <jaris@ifi.uio.no>

	* bitfield: Clean up bitfield class and opimized .notIn().

	* torrent: Finished http class, testing remains.

2004-08-03      <jaris@ifi.uio.no>

	* torrent: Don't throw on zero length piece messages. Why do they send these?

2004-07-28    <jaris@ifi.uio.no>

	* torrent: Fixed a few bugs in the throttle and added min chunk size.

2004-07-25    <jaris@ifi.uio.no>

	* torrent: Fixed bug that made it skip sending the stop message to the tracker when quiting.

	* torrent: Changed stdint.h to inttypes.h and made it easy to disable execinfo.h in client.

	* torrent: Added throttle with tree structure. Bandwidth delegation needs work.

2004-07-20    <jaris@ifi.uio.no>

	* torrent: Using deque instead of list to increase performance.

	* torrent: Don't close the connection if errno == EINTR.

	* client: Added view of the exceptions log.

2004-07-11    <jaris@ifi.uio.no>

	* torrent: Choosing new chunks to download according to how many we see.

2004-07-10    <jaris@ifi.uio.no>

	* torrent: BitField::allSet() now works right, fixes problems with finished peers not being disconnected.

	* client: No longer breaks when it receives resize interrupts during select.

2004-07-08    <jaris@ifi.uio.no>

	* torrent: Fixed mangling of outgoing commands.

2004-07-07    <jaris@ifi.uio.no>

	* torrent: Cleaned up the BitField class.

	* client: Cleaned up the UI.

2004-07-04    <jaris@ifi.uio.no>

	* client: Added scrolling when selecting peers or downloads. View the local bitfield.

	* torrent: Fixed some unchoking bugs and made it better at choosing whom to unchoke.

2004-06-29    <jaris@ifi.uio.no>

	* torrent: Cleaned up PeerConnection::write and made it buffer more commands in one send.

2004-06-27    <jaris@ifi.uio.no>

	* torrent: Added automatic creation of directories.
